--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@octokit/rest": "^21.1.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@stagewise/toolbar-next": "^0.1.2",
     "@tailwindcss/typography": "^0.5.16",
