--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.env
+node_modules
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+
+.cursor/
+.cursorrules
