--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.32"
   },
   "devDependencies": {
