Integrate Clerk for authentication in the admin panel, replacing password-based login with Clerk's UserButton. Refactor AdminPage and InlineEditorPage to streamline post management and enhance user experience. Update environment configuration for Clerk API integration and add necessary dependencies in package.json and pnpm-lock.yaml. Adjust global styles for Clerk admin avatar display.

--- a/env.example
+++ b/env.example
@@ -3,8 +3,9 @@ GITHUB_TOKEN=your_github_token_here
 GITHUB_REPO_OWNER=your_github_username
 GITHUB_REPO_NAME=your_repository_name
 
-# Admin Panel Access
-NEXT_PUBLIC_ADMIN_PASSWORD=your_secure_admin_password_here
+# Admin Panel Access Using Clerk API's
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
+CLERK_SECRET_KEY=your_clerk_secret_key_here 
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://yoursite.com 
