--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yashrajmaher",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
+    "lint": "bun --bun next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.1",
@@ -77,5 +77,10 @@
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
     "tailwindcss": "^4.1.0"
-  }
+  },
+  "trustedDependencies": [
+    "@clerk/shared",
+    "@tailwindcss/oxide",
+    "unrs-resolver"
+  ]
 }
