Remove Clerk authentication and related components from the admin panel. Delete API routes for post management, image uploads, and content retrieval. Clean up global styles and middleware, ensuring a streamlined codebase. Update package dependencies accordingly.

--- a/env.example
+++ b/env.example
@@ -3,10 +3,10 @@ GITHUB_TOKEN=your_github_token_here
 GITHUB_REPO_OWNER=your_github_username
 GITHUB_REPO_NAME=your_repository_name
 
-# Admin Panel Access Using Clerk API's
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
-CLERK_SECRET_KEY=your_clerk_secret_key_here 
-ADMIN_USER_ID=your_clerk_user_id_here
+# Admin Panel Access Using Convex
+
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://yoursite.com 
+
+NODE_ENV=development
