--- a/package.json
+++ b/package.json
@@ -1,60 +1,80 @@
 {
-  "name": "yashrajmaher",
-  "version": "0.1.7",
-  "private": true,
-  "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
-    "lint": "bun --bun next lint"
-  },
-  "dependencies": {
-    "@octokit/rest": "^21.1.0",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@stagewise/toolbar-next": "^0.4.7",
-    "@tailwindcss/typography": "^0.5.16",
-    "@vercel/analytics": "^1.4.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0.473.0",
-    "next": "15.1.5",
-    "octokit": "^4.1.1",
-    "prismjs": "^1.29.0",
-    "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.3",
-    "react-resizable-panels": "^3.0.2",
-    "rehype-raw": "^7.0.0",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.0",
-    "server-only": "^0.0.1",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "turndown": "^7.2.0",
-    "uuid": "^11.1.0",
-    "zod": "^3.25.32"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.0",
-    "@tailwindcss/vite": "^4.1.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "tailwindcss": "^4.1.0"
-  },
-  "trustedDependencies": [
-    "@tailwindcss/oxide",
-    "unrs-resolver"
-  ]
+	"name": "yashrajmaher",
+	"version": "0.1.7",
+	"private": true,
+	"scripts": {
+		"dev": "concurrently --names \"WEB,SERVER\" --prefix-colors \"cyan,magenta\" --prefix \"[{name}]\" --kill-others-on-fail \"bun --bun next dev\" \"bunx convex dev\"",
+		"dev:web": "bun --bun next dev",
+		"dev:server": "bunx convex dev",
+		"build": "bun --bun next build",
+		"start": "bun --bun next start",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"format": "bunx prettier --write .",
+		"format:check": "bunx prettier --check ."
+	},
+	"dependencies": {
+		"@octokit/rest": "^21.1.0",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.12",
+		"@stagewise/toolbar-next": "^0.4.7",
+		"@tailwindcss/typography": "^0.5.16",
+		"@vercel/analytics": "^1.4.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"convex": "^1.24.8",
+		"date-fns": "^4.1.0",
+		"gray-matter": "^4.0.3",
+		"lucide-react": "^0.473.0",
+		"next": "15.1.5",
+		"octokit": "^4.1.1",
+		"prismjs": "^1.29.0",
+		"react": "^19.0.0",
+		"react-day-picker": "8.10.1",
+		"react-dom": "^19.0.0",
+		"react-markdown": "^9.0.3",
+		"react-resizable-panels": "^3.0.2",
+		"rehype-raw": "^7.0.0",
+		"remark-breaks": "^4.0.0",
+		"remark-gfm": "^4.0.0",
+		"server-only": "^0.0.1",
+		"sonner": "^2.0.3",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7",
+		"turndown": "^7.2.0",
+		"uuid": "^11.1.0",
+		"zod": "^3.25.32"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@eslint/js": "^9.29.0",
+		"@tailwindcss/postcss": "^4.1.0",
+		"@tailwindcss/vite": "^4.1.0",
+		"@typescript-eslint/eslint-plugin": "^8.34.0",
+		"@typescript-eslint/parser": "^8.34.0",
+		"concurrently": "^9.1.2",
+		"eslint": "^9.29.0",
+		"eslint-config-next": "15.1.5",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"postcss": "^8",
+		"prettier": "^3.5.3",
+		"prettier-plugin-sort-imports": "^1.8.8",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"tailwindcss": "^4.1.0",
+		"typescript": "^5.8.3"
+	},
+	"trustedDependencies": [
+		"@tailwindcss/oxide",
+		"esbuild",
+		"sharp",
+		"unrs-resolver"
+	]
 }
