Update .prettierignore to exclude specific public folders and improve About page formatting

--- a/.prettierignore
+++ b/.prettierignore
@@ -20,6 +20,10 @@ tailwind.config.js
 schema.ts
 convex/
 
+# No Change Folder
+/public/Bposts/*
+/public/devposts/*
+
 # Cache directories
 .cache/
 .vscode/ # VS Code specific settings/cache
