Add Convex authentication and configuration; update environment variables and package dependencies
- Introduced .example.env for environment variable management.
- Updated .gitignore to exclude additional files.
- Added Convex authentication middleware and updated ConvexClientProvider for integration.
- Enhanced package.json and bun.lock with new dependencies for authentication.
- Adjusted TypeScript configuration for improved path resolution.
- Refactored imports across various components for consistency.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "incremental": true,
     "module": "esnext",
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -21,13 +21,21 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@/components/*": ["components/*"],
+      "@/app/*": ["app/*"],
+      "@/lib/*": ["lib/*"],
+      "@/public/*": ["public/*"],
+      "@/utils/*": ["app/utils/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "**/*"
   ],
   "exclude": [
     "node_modules"
