--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"format:check": "bunx prettier --check ."
 	},
 	"dependencies": {
+		"@auth/core": "0.37.0",
+		"@convex-dev/auth": "^0.0.87",
 		"@octokit/rest": "^21.1.0",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
