--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.12",
 		"@stagewise/toolbar-next": "^0.4.7",
@@ -34,6 +36,7 @@
 		"gray-matter": "^4.0.3",
 		"lucide-react": "^0.473.0",
 		"next": "15.1.5",
+		"next-themes": "^0.4.6",
 		"octokit": "^4.1.1",
 		"prismjs": "^1.29.0",
 		"react": "^19.0.0",
@@ -45,7 +48,7 @@
 		"remark-breaks": "^4.0.0",
 		"remark-gfm": "^4.0.0",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.3",
+		"sonner": "^2.0.5",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"turndown": "^7.2.0",
