--- a/env.example
+++ b/env.example
@@ -9,4 +9,7 @@ CLERK_SECRET_KEY=your_clerk_secret_key_here
 ADMIN_USER_ID=your_clerk_user_id_here
 
 # Site Configuration
-NEXT_PUBLIC_SITE_URL=https://yoursite.com 
+NEXT_PUBLIC_SITE_URL=https://yoursite.com
+
+# OpenRouter API Configuration for Chat Agent
+OPENROUTER_API_KEY=your_openrouter_api_key_here 
