--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@auth/core": "0.37.0",
 		"@octokit/rest": "^21.1.0",
+		"@prisma/client": "^6.10.0",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -27,6 +28,7 @@
 		"@radix-ui/react-tabs": "^1.1.12",
 		"@stagewise/toolbar-next": "^0.4.7",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^24.0.3",
 		"@vercel/analytics": "^1.4.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -36,6 +38,7 @@
 		"next": "15.1.5",
 		"next-themes": "^0.4.6",
 		"octokit": "^4.1.1",
+		"prisma": "^6.10.0",
 		"prismjs": "^1.29.0",
 		"react": "^19.0.0",
 		"react-day-picker": "8.10.1",
@@ -49,6 +52,7 @@
 		"sonner": "^2.0.5",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.20.3",
 		"turndown": "^7.2.0",
 		"uuid": "^11.1.0",
 		"zod": "^3.25.32"
@@ -67,6 +71,7 @@
 	},
 	"trustedDependencies": [
 		"@tailwindcss/oxide",
+		"esbuild",
 		"sharp",
 		"unrs-resolver"
 	]
