Updated to use prisma

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -29,7 +29,11 @@
     ".env*",
     ".vercel",
     "*.tsbuildinfo",
-    "convex/"
+    "convex/",
+    "prisma/",
+    "public/*",
+    "generated/*",
+    "components/ui/*"
   ],
   "overrides": [
     {
