Update Prisma and dependencies; refactor blog post handling
- Upgraded Prisma and related packages to version 6.10.1 in bun.lock and package.json.
- Refactored blog post metadata handling to use 'createdAt' instead of 'date' for improved clarity.
- Updated the Prisma schema to switch the database provider from SQLite to PostgreSQL.
- Adjusted the ArticleLayout component to reflect the change in date handling.

--- a/package.json
+++ b/package.json
@@ -1,76 +1,79 @@
 {
-	"name": "yashrajmaher",
-	"version": "0.1.7",
-	"private": true,
-	"scripts": {
-		"dev": "bun --bun next dev",
-		"build": "bun --bun next build",
-		"start": "bun --bun next start",
-		"lint": "oxlint .",
-		"lint:fix": "oxlint . --fix",
-		"format": "bunx prettier --write .",
-		"format:check": "bunx prettier --check ."
-	},
-	"dependencies": {
-		"@auth/core": "0.37.0",
-		"@octokit/rest": "^21.1.0",
-		"@prisma/client": "^6.10.0",
-		"@radix-ui/react-avatar": "^1.1.10",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-dropdown-menu": "^2.1.15",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-popover": "^1.1.14",
-		"@radix-ui/react-select": "^2.2.5",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-tabs": "^1.1.12",
-		"@stagewise/toolbar-next": "^0.4.7",
-		"@tailwindcss/typography": "^0.5.16",
-		"@types/node": "^24.0.3",
-		"@vercel/analytics": "^1.4.1",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"date-fns": "^4.1.0",
-		"gray-matter": "^4.0.3",
-		"lucide-react": "^0.473.0",
-		"next": "15.1.5",
-		"next-themes": "^0.4.6",
-		"octokit": "^4.1.1",
-		"prisma": "^6.10.0",
-		"prismjs": "^1.29.0",
-		"react": "^19.0.0",
-		"react-day-picker": "8.10.1",
-		"react-dom": "^19.0.0",
-		"react-markdown": "^9.0.3",
-		"react-resizable-panels": "^3.0.2",
-		"rehype-raw": "^7.0.0",
-		"remark-breaks": "^4.0.0",
-		"remark-gfm": "^4.0.0",
-		"server-only": "^0.0.1",
-		"sonner": "^2.0.5",
-		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7",
-		"tsx": "^4.20.3",
-		"turndown": "^7.2.0",
-		"uuid": "^11.1.0",
-		"zod": "^3.25.32"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.29.0",
-		"@tailwindcss/postcss": "^4.1.0",
-		"concurrently": "^9.1.2",
-		"oxlint": "^1.1.0",
-		"postcss": "^8",
-		"prettier": "^3.5.3",
-		"prettier-plugin-sort-imports": "^1.8.8",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"tailwindcss": "^4.1.0",
-		"typescript": "^5.8.3"
-	},
-	"trustedDependencies": [
-		"@tailwindcss/oxide",
-		"esbuild",
-		"sharp",
-		"unrs-resolver"
-	]
+  "name": "yashrajmaher",
+  "version": "0.1.7",
+  "private": true,
+  "scripts": {
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
+    "lint": "oxlint .",
+    "lint:fix": "oxlint . --fix",
+    "format": "bunx prettier --write .",
+    "format:check": "bunx prettier --check ."
+  },
+  "dependencies": {
+    "@auth/core": "0.37.0",
+    "@octokit/rest": "^21.1.0",
+    "@prisma/client": "^6.10.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@stagewise/toolbar-next": "^0.4.7",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.0.3",
+    "@vercel/analytics": "^1.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.473.0",
+    "next": "15.1.5",
+    "next-themes": "^0.4.6",
+    "octokit": "^4.1.1",
+    "prisma": "^6.10.1",
+    "prismjs": "^1.29.0",
+    "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
+    "react-resizable-panels": "^3.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "server-only": "^0.0.1",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
+    "turndown": "^7.2.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.32"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@tailwindcss/postcss": "^4.1.0",
+    "concurrently": "^9.1.2",
+    "oxlint": "^1.1.0",
+    "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-sort-imports": "^1.8.8",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.0",
+    "typescript": "^5.8.3"
+  },
+  "trustedDependencies": [
+    "@prisma/client",
+    "@prisma/engines",
+    "@tailwindcss/oxide",
+    "esbuild",
+    "prisma",
+    "sharp",
+    "unrs-resolver"
+  ]
 }
