Update .example.env to remove deprecated GitHub and Convex configurations; add Prisma Postgres DB section

--- a/.example.env
+++ b/.example.env
@@ -1,13 +1,6 @@
-# GitHub API Token for content management
-GITHUB_TOKEN=your_github_token_here
-GITHUB_REPO_OWNER=your_github_username
-GITHUB_REPO_NAME=your_repository_name
-
-# Admin Panel Access Using Convex
-CONVEX_DEPLOYMENT=
-NEXT_PUBLIC_CONVEX_URL=
-
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://yoursite.com 
 
 NODE_ENV=development
+
+#### Prisma Postgres DB
