Enhance authentication and database schema
- Added Better Auth keys to .example.env for improved authentication configuration.
- Updated package.json and bun.lock to include the better-auth package and its dependencies.
- Refactored Prisma schema to introduce User, Session, Account, and Verification models, enhancing the database structure for user management.
- Removed the deprecated dev.db file to streamline the database setup.

--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,8 @@ NEXT_PUBLIC_SITE_URL=https://yoursite.com
 NODE_ENV=development
 
 #### Prisma Postgres DB
+#... your prisma Postgres keys here
+
+#### Better Auth Keys
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
