--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^24.0.3",
 		"@vercel/analytics": "^1.4.1",
+		"better-auth": "^1.2.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
