--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "oxlint .",
 		"lint:fix": "oxlint . --fix",
 		"format": "bunx prettier --write .",
-		"format:check": "bunx prettier --check ."
+		"format:check": "bunx prettier --check .",
+		"clean": "rm -rf .next && bun pm cache rm"
 	},
 	"dependencies": {
 		"@auth/core": "0.37.0",
