--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "bun --bun next dev",
-		"build": "bun --bun next build",
+		"build": "bunx prisma generate && bun --bun next build",
 		"start": "bun --bun next start",
 		"lint": "oxlint .",
 		"lint:fix": "oxlint . --fix",
