--- a/package.json
+++ b/package.json
@@ -28,6 +28,16 @@
 		"@radix-ui/react-tabs": "^1.1.12",
 		"@stagewise/toolbar-next": "^0.4.7",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tiptap/extension-highlight": "^2.23.0",
+		"@tiptap/extension-image": "^2.23.0",
+		"@tiptap/extension-link": "^2.23.0",
+		"@tiptap/extension-task-item": "^2.23.0",
+		"@tiptap/extension-task-list": "^2.23.0",
+		"@tiptap/extension-text-align": "^2.23.0",
+		"@tiptap/extension-typography": "^2.23.0",
+		"@tiptap/pm": "^2.23.0",
+		"@tiptap/react": "^2.23.0",
+		"@tiptap/starter-kit": "^2.23.0",
 		"@types/node": "^24.0.3",
 		"@vercel/analytics": "^1.4.1",
 		"better-auth": "^1.2.10",
